<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true">


        <EditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/checkpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/checkpassword"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/matricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/matricula"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:id="@+id/layout_botoes"
        android:orientation="horizontal"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/registar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registar"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="259dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"></Button>




    </LinearLayout>




</RelativeLayout>