<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_centerInParent="true">

    <!-- Linhas 1 e 2 -->
    <LinearLayout
        android:id="@+id/user_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true">

        <!-- Username -->
        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:layout_marginBottom="10dp"/>

        <!-- Password -->
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_pass"
        android:layout_centerHorizontal="true">

        <!-- Login -->
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="0dp"
            android:text="Login"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="184dp"
            android:layout_centerHorizontal="true"/>

        <!-- Registo -->
        <Button
            android:id="@+id/registo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registar"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="259dp"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"/>

    </RelativeLayout>

</RelativeLayout>